WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147746
Crashes when calling swizzled setNeedsDisplayInRect: on heartbeat thread
https://bugs.webkit.org/show_bug.cgi?id=147746
Summary
Crashes when calling swizzled setNeedsDisplayInRect: on heartbeat thread
Anders Carlsson
Reported
2015-08-06 14:22:10 PDT
Crashes when calling swizzled setNeedsDisplayInRect: on heartbeat thread
Attachments
Patch
(1.43 KB, patch)
2015-08-06 14:25 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-08-06 14:25:47 PDT
Created
attachment 258397
[details]
Patch
Anders Carlsson
Comment 2
2015-08-06 14:38:35 PDT
Committed
r188063
: <
http://trac.webkit.org/changeset/188063
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug