Crashes when calling swizzled setNeedsDisplayInRect: on heartbeat thread https://bugs.webkit.org/show_bug.cgi?id=147746 rdar://problem/18698271

Reviewed by Dan Bernstein.

Back off if someone is calling our swizzled setNeedsDisplayInRect on a non-main thread.

* WebView/WebHTMLView.mm:
(setNeedsDisplayInRect):

Canonical link: https://commits.webkit.org/165832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188063 268f45cc-cd09-0410-ab3c-d52691b4dbfc